--- a/_posts/2020-05-12-qf_intro.md
+++ b/_posts/2020-05-12-qf_intro.md
@@ -8,7 +8,6 @@ excerpt: "Preface, Inspiration, Brief Coverage on Foundational Topics & Personal
 mathjax: "true"
 ---
 
-
 # Preface
 ---
 Since the start of my independent exploratory journey into the world of Quantitative Finance, as a young mathematician in his early 20s coming from a Physics & Mathematics background, I have dedicated hundreds to thousands of hours studying the fundamentals of finance as a whole, specifically with my progression towards the CFA (with plan to pursue the CFQ subsequently), cultivating experiences & skills in data science through academic projects, independently and collaboratively with fellow peers, as well as watching/reading graduate-level lectures on Financial Engineering, Mathematics, Computer Science, etc...My garnered knowledge & work have all lead me to develop an intricate customizable Quant Engine, containing tens of thousands lines of Python codes, designed with an event-driven architecture for backtesting & live-trading purposes, to which allowed me to not just coming up with strategy models/ideas & performing research work through an extensive self-written library of mathematical calculations, but also being able to backtest them to validate and continuously improving my overarching quantitative trading algorithm.
@@ -28,7 +27,6 @@ The decision to compose publication(s) of my research notes & implementation res
 *Brief coverage on basic foundational topics in finance for understanding toward alpha designs & portfolio management*
 
 ---
-
 ### Alpha & Beta
 
 In general finance & economics, a commonly known model called the [Capital Asset Pricing Model](https://corporatefinanceinstitute.com/resources/knowledge/finance/what-is-capm-formula/ " Capital Asset Pricing Model") (CAPM) can be perceived to serve as the propelling root of cause for the concept of alpha:
@@ -70,78 +68,78 @@ As such topic can start from a very simplistic implementation to a much more com
 
 Assume we have constructed a portfolio of selected securities (this is an intricate process that we will further explore), we seek to generate maximal returns with as minimal risk as possible, both in-sample & out-sample.
 If we have *M* amount of the selected securities in such portfolio, and given a selected *N* time indexes (minute/hour/day/week/month/year/etc), we have their N **historical prices** of M securities, each defined as:
-<img src="https://latex.codecogs.com/gif.latex?\vec{p_i}&space;=&space;\begin{vmatrix}&space;p_{i_1}\\&space;p_{i_2}\\&space;\vdots\\&space;p_{i_N}&space;\end{vmatrix}" title="\vec{p_i} = \begin{vmatrix} p_{i_1}\\ p_{i_2}\\ \vdots\\ p_{i_N} \end{vmatrix}" /> where <img src="https://latex.codecogs.com/gif.latex?i&space;=&space;1,2,...,M" title="i = 1,2,...,M" /> indexed as each security in such portfolio
+$$\vec{p_i} = \begin{vmatrix} p_{i_1}\\ p_{i_2}\\ \vdots\\ p_{i_N} \end{vmatrix}$$ where $$i = 1,2,...,M$$ indexed as each security in such portfolio
 
 > **NOTE**: Historical prices data are subjected to readjustment for any purpose. We can define them as simple as the open or close prices for each time index, or to other customizable approaches, like setting it as the average between the two, etc...it is your choice to model the prices for whatever purposes that might follow your theoretical way on tackling the objective at hand, whether that be assessing assets' relationships or building predictive models.
 
-We then proceed on defining the securities *logarithmic* returns vectors  as:
+We then proceed on defining the securities *logarithmic* returns vectors as:
 
-<img src="https://latex.codecogs.com/gif.latex?\vec{r_i}&space;=&space;\begin{vmatrix}&space;r_{i_1}\\&space;r_{i_2}\\&space;\vdots\\&space;r_{i_N}&space;\end{vmatrix}&space;=&space;\begin{vmatrix}&space;log(\frac{p_{i_2}}{p_{i_1}})\\&space;\\&space;log(\frac{p_{i_3}}{p_{i_2}})\\&space;\vdots\\&space;log(\frac{p_{i_N}}{p_{i_{N-1}}})&space;\end{vmatrix}" title="\vec{r_i} = \begin{vmatrix} r_{i_1}\\ r_{i_2}\\ \vdots\\ r_{i_N} \end{vmatrix} = \begin{vmatrix} log(\frac{p_{i_2}}{p_{i_1}})\\ \\ log(\frac{p_{i_3}}{p_{i_2}})\\ \vdots\\ log(\frac{p_{i_N}}{p_{i_{N-1}}}) \end{vmatrix}" /> 
+$$\vec{r_i} = \begin{vmatrix} r_{i_1}\\ r_{i_2}\\ \vdots\\ r_{i_N} \end{vmatrix} = \begin{vmatrix} log(\frac{p_{i_2}}{p_{i_1}})\\ \\ log(\frac{p_{i_3}}{p_{i_2}})\\ \vdots\\ log(\frac{p_{i_N}}{p_{i_{N-1}}}) \end{vmatrix}$$
 
 >- Another way to calculate the interval returns can as straight forward as percentage change of one point to the next.
 - We use log to smoothen the returns shape & minimize outliers. This can be good & bad, depending on the situation, as we will further explore.
 
 We can construct a table of such defined prices & returns of *M* securities as an *N x M* matrix, where M columns as securities & N rows as time indexes, such that:
-<img src="https://latex.codecogs.com/gif.latex?PRICE&space;=&space;\begin{vmatrix}&space;p_{1_1}&p_{2_1}&space;&\hdots&space;&p_{M_1}&space;\\&space;p_{1_2}&p_{2_2}&space;&\hdots&space;&p_{M_2}&space;\\&space;\vdots&\vdots&space;&\ddots&space;&\vdots&space;\\&space;p_{1_N}&p_{2_N}&space;&\hdots&space;&p_{M_N}&space;\end{vmatrix}" title="PRICE = \begin{vmatrix} p_{1_1}&p_{2_1} &\hdots &p_{M_1} \\ p_{1_2}&p_{2_2} &\hdots &p_{M_2} \\ \vdots&\vdots &\ddots &\vdots \\ p_{1_N}&p_{2_N} &\hdots &p_{M_N} \end{vmatrix}" /> , <img src="https://latex.codecogs.com/gif.latex?RET&space;=&space;\begin{vmatrix}&space;r_{1_1}&r_{2_1}&space;&\hdots&space;&r_{M_1}&space;\\&space;r_{1_2}&r_{2_2}&space;&\hdots&space;&r_{M_2}&space;\\&space;\vdots&\vdots&space;&\ddots&space;&\vdots&space;\\&space;r_{1_N}&r_{2_N}&space;&\hdots&space;&r_{M_N}&space;\end{vmatrix}" title="RET = \begin{vmatrix} r_{1_1}&r_{2_1} &\hdots &r_{M_1} \\ r_{1_2}&r_{2_2} &\hdots &r_{M_2} \\ \vdots&\vdots &\ddots &\vdots \\ r_{1_N}&r_{2_N} &\hdots &r_{M_N} \end{vmatrix}" />
+$$PRICE = \begin{vmatrix} p_{1_1}&p_{2_1} &\hdots &p_{M_1} \\ p_{1_2}&p_{2_2} &\hdots &p_{M_2} \\ \vdots&\vdots &\ddots &\vdots \\ p_{1_N}&p_{2_N} &\hdots &p_{M_N} \end{vmatrix}$$ , $$RET = \begin{vmatrix} r_{1_1}&r_{2_1} &\hdots &r_{M_1} \\ r_{1_2}&r_{2_2} &\hdots &r_{M_2} \\ \vdots&\vdots &\ddots &\vdots \\ r_{1_N}&r_{2_N} &\hdots &r_{M_N} \end{vmatrix}$$
 
 
 Next, we ask the question on what are the most **optimal allocations**, which we define optimal differently depending on the situation, though primarily, we often regard to a portfolio with the optimal allocations to which maximizes a specific ratio that's widely being used in the investment world to evaluate performance of any portfolio/strategy/security:
 
->**Sharpe Ratio** (or Information Ratio as dubbed by Tulchinsky) = <img src="https://latex.codecogs.com/gif.latex?\frac{\bar{R_p}&space;-&space;R_f}{\sigma_p}" title="\frac{\bar{R_p} - R_f}{\sigma_p}" /> where, simplistically speaking,
-<img src="https://latex.codecogs.com/gif.latex?\sigma_p" title="\sigma_p" /> = Portfolio's Volatility = Standard Deviation of Portfolio's Returns,
-<img src="https://latex.codecogs.com/gif.latex?\bar{R_p}" title="\bar{R_p}" /> = Portfolio's Returns
+>**Sharpe Ratio** (or Information Ratio as dubbed by Tulchinsky) = $$\frac{\bar{R_p} - R_f}{\sigma_p}$$ where, simplistically speaking,
+$$\sigma_p$$ = Portfolio's Volatility = Standard Deviation of Portfolio's Returns,
+$$\bar{R_p}$$ = Portfolio's Returns
 
-We perceive Portfolio Allocations ~ Direction (long/short) + Magnitude (0-100% of available capital), where for the given *M* securities to allocate out capital towards, With 100% = 1 capital available , we define our allocations/weights as:
-<img src="https://latex.codecogs.com/gif.latex?w&space;=&space;\begin{vmatrix}&space;w_1\\&space;w_2\\&space;\vdots\\&space;w_M&space;\end{vmatrix}" title="w = \begin{vmatrix} w_1\\ w_2\\ \vdots\\ w_M \end{vmatrix}" />  such that <img src="https://latex.codecogs.com/gif.latex?-1&space;\leq&space;w_{i}\leq&space;1" title="-1 \leq w_{i}\leq 1" /> and <img src="https://latex.codecogs.com/gif.latex?\sum_{1}^{M}w_i&space;=&space;1" title="\sum_{1}^{M}w_i = 1" /> 
+We perceive Portfolio Allocations ~ Direction (long/short) + Magnitude (0-100% of available capital), where for the given *M* securities to allocate out capital towards, With 100% = 1 capital available, we define our allocations/weights as:
+$$w = \begin{vmatrix} w_1\\ w_2\\ \vdots\\ w_M \end{vmatrix}$$ such that $$-1 \leq w_{i}\leq 1$$ and $$\sum_{1}^{M}w_i = 1$$
 
-> **IMPORTANT:** Both  <img src="https://latex.codecogs.com/gif.latex?\sigma_p" title="\sigma_p" /> & <img src="https://latex.codecogs.com/gif.latex?\bar{R_p}" title="\bar{R_p}" /> can be tweaked & incorporated with much more complexity, such as predictive data added, etc..There are a multitude of ways to compute & determine such value, to which we will further explore as many as we can in our pending research work.
+> **IMPORTANT:** Both  $$\sigma_p$$ & $$\bar{R_p}$$ can be tweaked & incorporated with much more complexity, such as predictive data added, etc..There are a multitude of ways to compute & determine such value, to which we will further explore as many as we can in our pending research work.
 
 For the sake of simplicity at the moment, performing analysis from the historical standpoint, we opt to first, calculate the individual portfolio's returns  ($$\vec{R_p}$$) for *N* time indexes, given allocations $$w$$, satisfying the condition defined above, for *M* amount of selected securities in such portfolio:
 
-<img src="https://latex.codecogs.com/gif.latex?\vec{R_p}&space;=&space;RET\cdot&space;w&space;=&space;\begin{vmatrix}&space;r_{1_1}&r_{2_1}&space;&\hdots&space;&r_{M_1}&space;\\&space;r_{1_2}&r_{2_2}&space;&\hdots&space;&r_{M_2}&space;\\&space;\vdots&\vdots&space;&\ddots&space;&\vdots&space;\\&space;r_{1_N}&r_{2_N}&space;&\hdots&space;&r_{M_N}&space;\end{vmatrix}&space;\cdot&space;\begin{vmatrix}&space;w_1\\&space;w_2\\&space;\vdots\\&space;w_M&space;\end{vmatrix}&space;=&space;\begin{vmatrix}&space;R_{p_1}\\&space;R_{p_2}\\&space;\vdots\\&space;R_{p_N}&space;\end{vmatrix}" title="\vec{R_p} = RET\cdot w = \begin{vmatrix} r_{1_1}&r_{2_1} &\hdots &r_{M_1} \\ r_{1_2}&r_{2_2} &\hdots &r_{M_2} \\ \vdots&\vdots &\ddots &\vdots \\ r_{1_N}&r_{2_N} &\hdots &r_{M_N} \end{vmatrix} \cdot \begin{vmatrix} w_1\\ w_2\\ \vdots\\ w_M \end{vmatrix} = \begin{vmatrix} R_{p_1}\\ R_{p_2}\\ \vdots\\ R_{p_N} \end{vmatrix}" />
+$$\vec{R_p} = RET\cdot w = \begin{vmatrix} r_{1_1}&r_{2_1} &\hdots &r_{M_1} \\ r_{1_2}&r_{2_2} &\hdots &r_{M_2} \\ \vdots&\vdots &\ddots &\vdots \\ r_{1_N}&r_{2_N} &\hdots &r_{M_N} \end{vmatrix} \cdot \begin{vmatrix} w_1\\ w_2\\ \vdots\\ w_M \end{vmatrix} = \begin{vmatrix} R_{p_1}\\ R_{p_2}\\ \vdots\\ R_{p_N} \end{vmatrix}$$
 
-Then, we can compute <img src="https://latex.codecogs.com/gif.latex?\bar{R_p}" title="\bar{R_p}" /> as the average returns for N time indexes, being the most commonly used & basic way of calculating it from a historical analysis standpoint, such that <img src="https://latex.codecogs.com/gif.latex?\dpi{150}&space;\bar{R_p}&space;=&space;\frac{\sum_{1}^{N}R_{p_i}}{N}" title="\bar{R_p} = \frac{\sum_{1}^{N}R_{p_i}}{N}" />
+Then, we can compute $$\bar{R_p}$$ as the average returns for N time indexes, being the most commonly used & basic way of calculating it from a historical analysis standpoint, such that $$\bar{R_p} = \frac{\sum_{1}^{N}R_{p_i}}{N}$$
 
 
-For portfolio's volatility $$\sigma_p$$, being the standard deviation of $$R_p$$, we seek to assess this topic in a much more intricate way, as assets exhibit correlational properties, as well as their volatility relationships between each other, and to the market they are in. For any allocations to which we seek to determine to be optimal in our process of optimization, we first calculate the covariance matrix (<img src="https://latex.codecogs.com/gif.latex?\boldsymbol{C}" title="\boldsymbol{C}" />) for *M* selected securities, using the constructed returns table:
+For portfolio's volatility $$\sigma_p$$, being the standard deviation of $$R_p$$, we seek to assess this topic in a much more intricate way, as assets exhibit correlational properties, as well as their volatility relationships between each other, and to the market they are in. For any allocations to which we seek to determine to be optimal in our process of optimization, we first calculate the covariance matrix $$\boldsymbol{C}$$ for *M* selected securities, using the constructed returns table:
 
-<img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;RET&space;=&space;\begin{vmatrix}&space;r_{1_1}&r_{2_1}&space;&\hdots&space;&r_{M_1}&space;\\&space;r_{1_2}&r_{2_2}&space;&\hdots&space;&r_{M_2}&space;\\&space;\vdots&\vdots&space;&\ddots&space;&\vdots&space;\\&space;r_{1_N}&r_{2_N}&space;&\hdots&space;&r_{M_N}&space;\end{vmatrix}&space;=&space;\begin{vmatrix}&space;r_{1}&space;&r_{2}&space;&\hdots&space;&r_{M}&space;\end{vmatrix}" title="RET = \begin{vmatrix} r_{1_1}&r_{2_1} &\hdots &r_{M_1} \\ r_{1_2}&r_{2_2} &\hdots &r_{M_2} \\ \vdots&\vdots &\ddots &\vdots \\ r_{1_N}&r_{2_N} &\hdots &r_{M_N} \end{vmatrix} = \begin{vmatrix} r_{1} &r_{2} &\hdots &r_{M} \end{vmatrix}" />
+$$RET = \begin{vmatrix} r_{1_1}&r_{2_1} &\hdots &r_{M_1} \\ r_{1_2}&r_{2_2} &\hdots &r_{M_2} \\ \vdots&\vdots &\ddots &\vdots \\ r_{1_N}&r_{2_N} &\hdots &r_{M_N} \end{vmatrix} = \begin{vmatrix} r_{1} &r_{2} &\hdots &r_{M} \end{vmatrix}$$
 
-where <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;r_{i}&space;=&space;\begin{vmatrix}&space;r_{i_1}\\&space;r_{i2}\\&space;\vdots\\&space;r_{i_N}&space;\end{vmatrix}" title="r_{i} = \begin{vmatrix} r_{i_1}\\ r_{i2}\\ \vdots\\ r_{i_N} \end{vmatrix}" /> represents *N* returns of individual security i in M selected securities, such that we can compute the **average returns** <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;\bar{r_{i}}" title="\bar{r_{i}}" /> which, for simplicity, defined as <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;\bar{r_{i}}&space;=&space;\frac{\sum_{n=1}^{N}&space;r_{i_n}}{N}" title="\bar{r_{i}} = \frac{\sum_{n=1}^{N} r_{i_n}}{N}" /> (subjected to variation - weighted, rolling, etc...).
+where $$r_{i} = \begin{vmatrix} r_{i_1}\\ r_{i2}\\ \vdots\\ r_{i_N} \end{vmatrix}$$ represents *N* returns of individual security i in M selected securities, such that we can compute the **average returns** $$\bar{r_{i}}$$ which, for simplicity, defined as $$\bar{r_{i}} = \frac{\sum_{n=1}^{N} r_{i_n}}{N}$$ (subjected to variation - weighted, rolling, etc...).
 
-We can proceed on de-meaning columns of $$RET$$, obtaining::
+We can proceed on de-meaning columns of $$RET$$, obtaining:
 
-<img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;\overline{RET}&space;=&space;\begin{vmatrix}&space;(r_{1_1}&space;-&space;\bar{r_{1}})&(r_{2_1}&space;-&space;\bar{r_{2}})&space;&\hdots&space;&(r_{M_1}&space;-&space;\bar{r_{M}})&space;\\&space;(r_{1_2}&space;-&space;\bar{r_{1}})&space;&(r_{2_2}&space;-&space;\bar{r_{2}})&space;&\hdots&space;&(r_{M_2}&space;-&space;\bar{r_{M}})&space;\\&space;\vdots&\vdots&space;&\ddots&space;&\vdots&space;\\&space;(r_{1_N}&space;-&space;\bar{r_{1}})&(r_{2_N}&space;-&space;\bar{r_{2}})&space;&\hdots&space;&(r_{M_N}&space;-&space;\bar{r_{M}})&space;\end{vmatrix}" title="\overline{RET} = \begin{vmatrix} (r_{1_1} - \bar{r_{1}})&(r_{2_1} - \bar{r_{2}}) &\hdots &(r_{M_1} - \bar{r_{M}}) \\ (r_{1_2} - \bar{r_{1}}) &(r_{2_2} - \bar{r_{2}}) &\hdots &(r_{M_2} - \bar{r_{M}}) \\ \vdots&\vdots &\ddots &\vdots \\ (r_{1_N} - \bar{r_{1}})&(r_{2_N} - \bar{r_{2}}) &\hdots &(r_{M_N} - \bar{r_{M}}) \end{vmatrix}" />
+$$\overline{RET} = \begin{vmatrix} (r_{1_1} - \bar{r_{1}})&(r_{2_1} - \bar{r_{2}}) &\hdots &(r_{M_1} - \bar{r_{M}}) \\ (r_{1_2} - \bar{r_{1}}) &(r_{2_2} - \bar{r_{2}}) &\hdots &(r_{M_2} - \bar{r_{M}}) \\ \vdots&\vdots &\ddots &\vdots \\ (r_{1_N} - \bar{r_{1}})&(r_{2_N} - \bar{r_{2}}) &\hdots &(r_{M_N} - \bar{r_{M}}) \end{vmatrix}$$
 
 We can now calculate our **sample** covariance matrix:
 
-<img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;\boldsymbol{C}&space;=&space;\frac{\overline{RET}^\top&space;\cdot&space;\overline{RET}}{N-1}&space;=&space;\begin{vmatrix}&space;\sigma_1^2&space;&&space;\sigma_{12}&space;&&space;\hdots&space;&&space;\sigma_{1M}&space;\\&space;\sigma_{21}&space;&&space;\sigma_2^2&space;&&space;\hdots&space;&&space;\sigma_{2M}\\&space;\vdots&space;&\vdots&space;&\ddots&space;&\vdots&space;\\&space;\sigma_{M1}&space;&&space;\sigma_{M2}&space;&\hdots&space;&\sigma_M^2&space;\end{vmatrix}" title="\boldsymbol{C} = \frac{\overline{RET}^\top \cdot \overline{RET}}{N-1} = \begin{vmatrix} \sigma_1^2 & \sigma_{12} & \hdots & \sigma_{1M} \\ \sigma_{21} & \sigma_2^2 & \hdots & \sigma_{2M}\\ \vdots &\vdots &\ddots &\vdots \\ \sigma_{M1} & \sigma_{M2} &\hdots &\sigma_M^2 \end{vmatrix}" />
+$$\boldsymbol{C} = \frac{\overline{RET}^\top \cdot \overline{RET}}{N-1} = \begin{vmatrix} \sigma_1^2 & \sigma_{12} & \hdots & \sigma_{1M} \\ \sigma_{21} & \sigma_2^2 & \hdots & \sigma_{2M}\\ \vdots &\vdots &\ddots &\vdots \\ \sigma_{M1} & \sigma_{M2} &\hdots &\sigma_M^2 \end{vmatrix}$$
 
-where <img src="https://latex.codecogs.com/gif.latex?\boldsymbol{C}" title="\boldsymbol{C}" /> is a *M x M* **square matrix**, such that:
-- The diagonal values <img src="https://latex.codecogs.com/gif.latex?\sigma_i^2" title="\sigma_i^2" /> = **variances** of individual securities <img src="https://latex.codecogs.com/gif.latex?i&space;=&space;1,2,...,M" title="i = 1,2,...,M" />
-- <img src="https://latex.codecogs.com/gif.latex?\sigma_{ij}" title="\sigma_{ij}" /> = <img src="https://latex.codecogs.com/gif.latex?\sigma_{ji}" title="\sigma_{ji}" /> = **covariances** between two different assets i & j, where <img src="https://latex.codecogs.com/gif.latex?i\neq&space;j" title="i\neq j" />
+where $$\boldsymbol{C}$$ is a *M x M* **square matrix**, such that:
+- The diagonal values $$\sigma_i^2$$ = **variances** of individual securities $$i = 1,2,...,M$$
+- $$\sigma_{ij} = \sigma_{ji}$$ = **covariances** between two different assets i & j, where $$i\neq j$$
 
-><img src="https://latex.codecogs.com/gif.latex?\sigma_{ij}&space;=&space;\sigma_{ji}" title="\sigma_{ij} = \sigma_{ji}" /> implies that  <img src="https://latex.codecogs.com/gif.latex?\boldsymbol{C}" title="\boldsymbol{C}" /> is a *symmetric*, or **Hermitian Matrix**. This is a very mathematically important fact that opens us to various options of exploration & analysis, such as Random Matrix Theory, Wilshart Matrices, etc.. to which we will further explore in this series.
+>$$\sigma_{ij} = \sigma_{ji}$$ implies that  $$\boldsymbol{C}$$ is a *symmetric*, or **Hermitian Matrix**. This is a very mathematically important fact that opens us to various options of exploration & analysis, such as Random Matrix Theory, Wilshart Matrices, etc.. to which we will further explore in this series.
 
-Thus, we proceed on calculating $$\sigma_p$$ using the covariance matrix <img src="https://latex.codecogs.com/gif.latex?\boldsymbol{C}" title="\boldsymbol{C}" />, given any allocation $$w$$ that satisfy the conditions above:
+Thus, we proceed on calculating $$\sigma_p$$ using the covariance matrix $$\boldsymbol{C}$$, given any allocation $$w$$ that satisfy the conditions above:
 
-<img src="https://latex.codecogs.com/gif.latex?\dpi{150}&space;\sigma_p&space;=&space;\sqrt{w^\top&space;\cdot&space;\boldsymbol{C}&space;\cdot&space;w}" title="\sigma_p = \sqrt{w^\top \cdot \boldsymbol{C} \cdot w}" />
+$$\sigma_p = \sqrt{w^\top \cdot \boldsymbol{C} \cdot w}$$
 
 ---
 ### Summary & Conclusion
 Putting them together, again, from the historical analysis standpoint, we want a portfolio with allocations $$w$$ for M securities, with their given (hourly/daily/weekly/etc) returns table $$RET$$, an *N x M* matrix, such that:
-- <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;\vec{R_p}&space;=&space;RET\cdot&space;w" title="\vec{R_p} = RET\cdot w" /> = Portfolio's individual returns through given N time indexes
+- $$\vec{R_p} = RET\cdot w$$ = Portfolio's individual returns through given N time indexes
 
-- <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;\boldsymbol{C}&space;=&space;\frac{\overline{RET}^\top&space;\cdot&space;\overline{RET}}{N-1}" title="\boldsymbol{C} = \frac{\overline{RET}^\top \cdot \overline{RET}}{N-1}" /> = (Sample) Covariance Matrix of M selected securities, calculated from N time indexes (different N's = different values)
+- $$\boldsymbol{C} = \frac{\overline{RET}^\top \cdot \overline{RET}}{N-1}$$ = (Sample) Covariance Matrix of M selected securities, calculated from N time indexes (different N's = different values)
 
 Thus, with:
-- <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;\bar{R_p}&space;=&space;\frac{\sum_{1}^{N}R_{p_i}}{N}" title="\bar{R_p} = \frac{\sum_{1}^{N}R_{p_i}}{N}" /> = Portfolio's Average Returns (for simplicity)
+- $$\bar{R_p} = \frac{\sum_{1}^{N}R_{p_i}}{N}$$ = Portfolio's Average Returns (for simplicity)
 
-- <img src="https://latex.codecogs.com/gif.latex?\dpi{120}&space;\sigma_p&space;=&space;\sqrt{w^\top&space;\cdot&space;\boldsymbol{C}&space;\cdot&space;w}" title="\sigma_p = \sqrt{w^\top \cdot \boldsymbol{C} \cdot w}" /> = Portfolio's Volatility/Standard Deviations of N Returns
+- $$\sigma_p = \sqrt{w^\top \cdot \boldsymbol{C} \cdot w}$$ = Portfolio's Volatility/Standard Deviations of N Returns
 
 - $$R_f$$ = Risk-Free Rate (usually set as returns rate of T-Bills, or any relatively risk-free assets, or 0 for simplicity)
 
-Portfolio's Sharpe/Information Ratio = <img src="https://latex.codecogs.com/gif.latex?\dpi{150}&space;\frac{\frac{\sum_{1}^{N}R_{p_i}}{N}&space;-&space;R_f}{\sqrt{w^\top&space;\cdot&space;\boldsymbol{C}&space;\cdot&space;w}}" title="\frac{\frac{\sum_{1}^{N}R_{p_i}}{N} - R_f}{\sqrt{w^\top \cdot \boldsymbol{C} \cdot w}}" />
+Portfolio's Sharpe/Information Ratio = $$\frac{\frac{\sum_{1}^{N}R_{p_i}}{N} - R_f}{\sqrt{w^\top \cdot \boldsymbol{C} \cdot w}}$$
 
 There are many potential applications we can have from understanding mean-variance analysis, especially portfolio **risk management**, as well as integrating predictive models & establishing **boundaries for optimization** exploited by computational power. Thus, this can help us figure out the optimal allocations to be holding at any given time, or even serving as a powerful overarching tool to **perform analysis on assets** using historical data, such as *industry analysis, correlational relationships, etc*. We can even utilize the individual terms/components of Portfolio's Sharpe Ratio to **design a custom system of steps & equations for optimization** to further seek mathematically unsolvable solutions, whereas such solutions can help in finding or evaluating reliable alpha signals (we will further explore this in later posts).
 
