--- a/_posts/2020-05-12-qf_intro.md
+++ b/_posts/2020-05-12-qf_intro.md
@@ -80,7 +80,7 @@ $$\vec{r_i} = \begin{vmatrix} r_{i_1}\\ r_{i_2}\\ \vdots\\ r_{i_N} \end{vmatrix}
 - We use log to smoothen the returns shape & minimize outliers. This can be good & bad, depending on the situation, as we will further explore.
 
 We can construct a table of such defined prices & returns of *M* securities as an *N x M* matrix, where M columns as securities & N rows as time indexes, such that:
-$$PRICE = \begin{vmatrix} p_{1_1}&p_{2_1} &\hdots &p_{M_1} \\ p_{1_2}&p_{2_2} &\hdots &p_{M_2} \\ \vdots&\vdots &\ddots &\vdots \\ p_{1_N}&p_{2_N} &\hdots &p_{M_N} \end{vmatrix}$$ , $$RET = \begin{vmatrix} r_{1_1}&r_{2_1} &\hdots &r_{M_1} \\ r_{1_2}&r_{2_2} &\hdots &r_{M_2} \\ \vdots&\vdots &\ddots &\vdots \\ r_{1_N}&r_{2_N} &\hdots &r_{M_N} \end{vmatrix}$$
+$$PRICE = \begin{vmatrix} p_{1_1}&p_{2_1} &\cdots &p_{M_1} \\ p_{1_2}&p_{2_2} &\cdots &p_{M_2} \\ \vdots&\vdots &\ddots &\vdots \\ p_{1_N}&p_{2_N} &\cdots &p_{M_N} \end{vmatrix}$$ , $$RET = \begin{vmatrix} r_{1_1}&r_{2_1} &\cdots &r_{M_1} \\ r_{1_2}&r_{2_2} &\cdots &r_{M_2} \\ \vdots&\vdots &\ddots &\vdots \\ r_{1_N}&r_{2_N} &\cdots &r_{M_N} \end{vmatrix}$$
 
 
 Next, we ask the question on what are the most **optimal allocations**, which we define optimal differently depending on the situation, though primarily, we often regard to a portfolio with the optimal allocations to which maximizes a specific ratio that's widely being used in the investment world to evaluate performance of any portfolio/strategy/security:
@@ -96,24 +96,24 @@ $$w = \begin{vmatrix} w_1\\ w_2\\ \vdots\\ w_M \end{vmatrix}$$ such that $$-1 \l
 
 For the sake of simplicity at the moment, performing analysis from the historical standpoint, we opt to first, calculate the individual portfolio's returns  ($$\vec{R_p}$$) for *N* time indexes, given allocations $$w$$, satisfying the condition defined above, for *M* amount of selected securities in such portfolio:
 
-$$\vec{R_p} = RET\cdot w = \begin{vmatrix} r_{1_1}&r_{2_1} &\hdots &r_{M_1} \\ r_{1_2}&r_{2_2} &\hdots &r_{M_2} \\ \vdots&\vdots &\ddots &\vdots \\ r_{1_N}&r_{2_N} &\hdots &r_{M_N} \end{vmatrix} \cdot \begin{vmatrix} w_1\\ w_2\\ \vdots\\ w_M \end{vmatrix} = \begin{vmatrix} R_{p_1}\\ R_{p_2}\\ \vdots\\ R_{p_N} \end{vmatrix}$$
+$$\vec{R_p} = RET\cdot w = \begin{vmatrix} r_{1_1}&r_{2_1} &\cdots &r_{M_1} \\ r_{1_2}&r_{2_2} &\cdots &r_{M_2} \\ \vdots&\vdots &\ddots &\vdots \\ r_{1_N}&r_{2_N} &\cdots &r_{M_N} \end{vmatrix} \cdot \begin{vmatrix} w_1\\ w_2\\ \vdots\\ w_M \end{vmatrix} = \begin{vmatrix} R_{p_1}\\ R_{p_2}\\ \vdots\\ R_{p_N} \end{vmatrix}$$
 
 Then, we can compute $$\bar{R_p}$$ as the average returns for N time indexes, being the most commonly used & basic way of calculating it from a historical analysis standpoint, such that $$\bar{R_p} = \frac{\sum_{1}^{N}R_{p_i}}{N}$$
 
 
 For portfolio's volatility $$\sigma_p$$, being the standard deviation of $$R_p$$, we seek to assess this topic in a much more intricate way, as assets exhibit correlational properties, as well as their volatility relationships between each other, and to the market they are in. For any allocations to which we seek to determine to be optimal in our process of optimization, we first calculate the covariance matrix $$\boldsymbol{C}$$ for *M* selected securities, using the constructed returns table:
 
-$$RET = \begin{vmatrix} r_{1_1}&r_{2_1} &\hdots &r_{M_1} \\ r_{1_2}&r_{2_2} &\hdots &r_{M_2} \\ \vdots&\vdots &\ddots &\vdots \\ r_{1_N}&r_{2_N} &\hdots &r_{M_N} \end{vmatrix} = \begin{vmatrix} r_{1} &r_{2} &\hdots &r_{M} \end{vmatrix}$$
+$$RET = \begin{vmatrix} r_{1_1}&r_{2_1} &\cdots &r_{M_1} \\ r_{1_2}&r_{2_2} &\cdots &r_{M_2} \\ \vdots&\vdots &\ddots &\vdots \\ r_{1_N}&r_{2_N} &\cdots &r_{M_N} \end{vmatrix} = \begin{vmatrix} r_{1} &r_{2} &\cdots &r_{M} \end{vmatrix}$$
 
 where $$r_{i} = \begin{vmatrix} r_{i_1}\\ r_{i2}\\ \vdots\\ r_{i_N} \end{vmatrix}$$ represents *N* returns of individual security i in M selected securities, such that we can compute the **average returns** $$\bar{r_{i}}$$ which, for simplicity, defined as $$\bar{r_{i}} = \frac{\sum_{n=1}^{N} r_{i_n}}{N}$$ (subjected to variation - weighted, rolling, etc...).
 
 We can proceed on de-meaning columns of $$RET$$, obtaining:
 
-$$\overline{RET} = \begin{vmatrix} (r_{1_1} - \bar{r_{1}})&(r_{2_1} - \bar{r_{2}}) &\hdots &(r_{M_1} - \bar{r_{M}}) \\ (r_{1_2} - \bar{r_{1}}) &(r_{2_2} - \bar{r_{2}}) &\hdots &(r_{M_2} - \bar{r_{M}}) \\ \vdots&\vdots &\ddots &\vdots \\ (r_{1_N} - \bar{r_{1}})&(r_{2_N} - \bar{r_{2}}) &\hdots &(r_{M_N} - \bar{r_{M}}) \end{vmatrix}$$
+$$\overline{RET} = \begin{vmatrix} (r_{1_1} - \bar{r_{1}})&(r_{2_1} - \bar{r_{2}}) &\cdots &(r_{M_1} - \bar{r_{M}}) \\ (r_{1_2} - \bar{r_{1}}) &(r_{2_2} - \bar{r_{2}}) &\cdots &(r_{M_2} - \bar{r_{M}}) \\ \vdots&\vdots &\ddots &\vdots \\ (r_{1_N} - \bar{r_{1}})&(r_{2_N} - \bar{r_{2}}) &\cdots &(r_{M_N} - \bar{r_{M}}) \end{vmatrix}$$
 
 We can now calculate our **sample** covariance matrix:
 
-$$\boldsymbol{C} = \frac{\overline{RET}^\top \cdot \overline{RET}}{N-1} = \begin{vmatrix} \sigma_1^2 & \sigma_{12} & \hdots & \sigma_{1M} \\ \sigma_{21} & \sigma_2^2 & \hdots & \sigma_{2M}\\ \vdots &\vdots &\ddots &\vdots \\ \sigma_{M1} & \sigma_{M2} &\hdots &\sigma_M^2 \end{vmatrix}$$
+$$\boldsymbol{C} = \frac{\overline{RET}^\top \cdot \overline{RET}}{N-1} = \begin{vmatrix} \sigma_1^2 & \sigma_{12} & \cdots & \sigma_{1M} \\ \sigma_{21} & \sigma_2^2 & \cdots & \sigma_{2M}\\ \vdots &\vdots &\ddots &\vdots \\ \sigma_{M1} & \sigma_{M2} &\cdots &\sigma_M^2 \end{vmatrix}$$
 
 where $$\boldsymbol{C}$$ is a *M x M* **square matrix**, such that:
 - The diagonal values $$\sigma_i^2$$ = **variances** of individual securities $$i = 1,2,...,M$$
