--- a/_posts/2020-05-12-qf_intro.md
+++ b/_posts/2020-05-12-qf_intro.md
@@ -10,7 +10,7 @@ mathjax: "true"
 
 # Preface
 ---
-Since the start of my independent exploratory journey into the world of Quantitative Finance, as a young mathematician in his early 20s coming from a Physics & Mathematics background, I have dedicated hundreds to thousands of hours studying the fundamentals of finance as a whole, specifically with my progression towards the CFA (with plan to pursue the CFQ subsequently), cultivating experiences & skills in data science through academic projects, independently and collaboratively with fellow peers, as well as watching/reading graduate-level lectures on Financial Engineering, Mathematics, Computer Science, etc...My garnered knowledge & work have all lead me to develop an intricate customizable Quant Engine, containing tens of thousands lines of Python codes, designed with an event-driven architecture for backtesting & live-trading purposes, to which allowed me to not just coming up with strategy models/ideas & performing research work through an extensive self-written library of mathematical calculations, but also being able to backtest them to validate and continuously improving my overarching quantitative trading algorithm.
+Since the start of my independent exploratory journey into the world of Quantitative Finance, as a young mathematician in his early 20s coming from a Physics & Mathematics background, I have dedicated hundreds to thousands of hours studying the fundamentals of finance as a whole, specifically with my progression towards the CFA (with plan to pursue the CQF subsequently), cultivating experiences & skills in data science through academic projects, independently and collaboratively with fellow peers, as well as watching/reading graduate-level lectures on Financial Engineering, Mathematics, Computer Science, etc...My garnered knowledge & work have all lead me to develop an intricate customizable Quant Engine, containing tens of thousands lines of Python codes, designed with an event-driven architecture for backtesting & live-trading purposes, to which allowed me to not just coming up with strategy models/ideas & performing research work through an extensive self-written library of mathematical calculations, but also being able to backtest them to validate and continuously improving my overarching quantitative trading algorithm.
 
 This series of posts under Quantitative Finance (QF) contains organized compositions of notes & coding contents from independent research, primarily aims toward the overarching goal of capturing alphas & developing alpha signals, whereas "alpha" plays a major part in almost all existing quantitative trading strategies out there (almost all leading firms have divisions focusing purely on capturing alphas). In the process of presenting my work & approach, I will try my best to shed light on relevant topics to which constitute the overall development of alpha design, though not in details, as I will attach links for further readings on those relevant topics (academic lectures, other posts, etc...).
 
