third post edits

--- a/_posts/2020-05-12-qf_intro.md
+++ b/_posts/2020-05-12-qf_intro.md
@@ -15,7 +15,7 @@ Since the start of my independent exploratory journey into the world of Quantita
 This series of posts under Quantitative Finance (QF) contains organized compositions of notes & coding contents from independent research, primarily aims toward the overarching goal of capturing alphas & developing alpha signals, whereas "alpha" plays a major part in almost all existing quantitative trading strategies out there (almost all leading firms have divisions focusing purely on capturing alphas). In the process of presenting my work & approach, I will try my best to shed light on relevant topics to which constitute the overall development of alpha design, though not in details, as I will attach links for further readings on those relevant topics (academic lectures, other posts, etc...).
 
 # Inspiration
-When it comes to systematic investing utilizing quantitative approaches, one thing to always keep in mind is that models (or rules) developed is only reliable at a "certain time," to which such time variable "t" in terms of its period/frequency, can be as dynamic as the reliability of the model developed itself.
+When it comes to systematic investing utilizing quantitative approaches, one thing to always keep in mind is that models (or rules) developed are only reliable at a "certain time," to which such time variable "t" in terms of its period/frequency, can be as dynamic as the reliability of the models developed themselves.
 
 In another words, as said by Igor Tulchinsky, the founder of WorldQuant:
 
