--- a/2020-05-12-qf_intro.md
+++ b/2020-05-12-qf_intro.md
@@ -8,20 +8,13 @@ excerpt: "Preface, Inspiration, Brief Coverage on Foundational Topics & Personal
 mathjax: "true"
 ---
 
-# Inspiration
-
-
-> "***An infinite number of possible rules describe reality, and we are always struggling to discover and refine them. Yet, paradoxically, there is only one rule that governs them all. That rule is: no rule ever works perfectly.***"
-
-The decision to write about my research notes & implementation results was propelled after reading Tulchinsky's book on [*Finding Alphas*](https://www.amazon.com/Finding-Alphas-Quantitative-Approach-Strategies/dp/1119057868), especially after realizing that my mathematical approach drew significant parallel to the content of his book, though Tulchinsky has provided me the terminologies & credible academic foundations needed to not just affirm my mathematical interpretations in tackling such topic, as well as my doubt on the reliability of my developed models & strategies, but also articulate my understandings & personal approaches that could potentially help other passionate participants in the world of Quantitative Finance.
-
 # Foundations & Basic Essentials
 *Brief coverage on basic foundational topics in finance for understanding toward alpha designs & portfolio management*
 
 ---
 ### Alpha & Beta
 
-In general finance & economics, a commonly known model called the [Capital Asset Pricing Model](https://corporatefinanceinstitute.com/resources/knowledge/finance/what-is-capm-formula/ " Capital Asset Pricing Model") (CAPM) can be perceived to serve as the propelling root of cause for the concept of alpha:
+In finance & economics, a commonly known model called the [Capital Asset Pricing Model](https://corporatefinanceinstitute.com/resources/knowledge/finance/what-is-capm-formula/ " Capital Asset Pricing Model") (CAPM) can be perceived to serve as the propelling root of cause for the concept of alpha:
 
 $$R_a = R_f + \beta (R_m - R_f)$$
 
@@ -36,10 +29,9 @@ $$\beta = $$ Beta of Security
 **Beta**, by definition, is the security's "sensitivity" to market's risk/volatility movement. Although, it is better to understand it from a quantitative approach, when it comes to alpha, as we proceed on understanding Beta as the **"regressed slope of the security's returns with respect to the returns of the selected market/benchmark** (e.g.: 0.5 beta = *on average*, for every 1% returns on the market, our security returns at 0.5%). We will demonstrate this terminology further as we move forward.
 
 In addition, notice we are using "expected returns" as this is important to proceed on understanding alpha design. Recall that since CAPM aims to model a security/portfolio, say AAPL, to a certain market as a benchmark to our choosing, say the SPY index, or even the XLK (Technology Index from SPDR) to compare AAPL with its competitors in the sector its operating in, to obtain its expected rate of returns in able to price equity investments.
->**REMARK**: This concept of modeling performance (return rate in this case) of a certain investment target with respect to another is my first exposure to understanding alpha design, as the ultimate goal of investing & trading in finance is about performing better than the market (personally as absolute as possible)
 
 
-First, we will start with the textbook definition:
+Starting with the textbook definition:
 > **Alpha** (or [Jensen's Alpha](https://financetrain.com/jensens-alpha/ "Jensen's Alpha"))  is the risk-adjusted/excess returns of a portfolio, used to evaluate its returns performance with respect to its expected returns against certain selected benchmark (using CAPM model).
 
 Jensen's $$\alpha = R_p - (R_f + \beta (R_m - R_f))$$
@@ -51,12 +43,11 @@ It is important to highlight the definition of alpha being **risk-adjusted/exces
 
 >**Alpha** is the **independent returns** of a portfolio with respect to a selected benchmark.
 
-It is valuable to have high alpha as best as we can, such that statistically, given the classic definition of alpha, regardless of market's movement, bullish or bearish, even if it crashes, the alpha component of a given portfolio return will not be affected. This is the power of finding alphas in the investing world.
+It is valuable to have high alpha as best as we can, such that statistically, given the classic definition of alpha, regardless of market's movement, bullish or bearish, even if it crashes, the alpha component of a given portfolio return will *mathematically* be unaffected. This is the power of finding alphas.
 
 ---
 ### Modern Portfolio Theory 
-From a fundamental perspective of portfolio management, controlling risk tolerance & maximizing returns, the topic of Modern Portfolio Theory (MPT), or mean-variance analysis, is essential in almost all aspects of investment.
-As such topic can start from a very simplistic implementation to a much more complex & layered one, we will be using the mathematics behind the concept in a much wider range of purposes than just maximizing returns & minimizing risks, approaching them through a quantitative perspective by utilizing abstract vector space & matrix theory.
+From a fundamental perspective of portfolio management, controlling risk tolerance & maximizing returns, the topic of Modern Portfolio Theory (MPT), or mean-variance analysis, is essential in quantitative finance.
 
 Assume we have constructed a portfolio of selected securities (this is an intricate process that we will further explore), we seek to generate maximal returns with as minimal risk as possible, both in-sample & out-sample.
 If we have *M* amount of the selected securities in such portfolio, and given a selected *N* time indexes (minute/hour/day/week/month/year/etc), we have their N **historical prices** of M securities, each defined as:
